--- a/cloudflare_tunnel/translations/en.yaml
+++ b/cloudflare_tunnel/translations/en.yaml
@@ -7,7 +7,7 @@ configuration:
     description: It stores your tunnel’s credentials in JSON format, and is unique to each tunnel. This file functions as a token authenticating the tunnel it is associated with.
   protocol:
     name: Protocol
-    description: Specifies the protocol used to establish a connection between cloudflared and the edge.
+    description: Specifies the protocol used to establish a connection between cloudflared and the Cloudflare global network.
   origincert:
     name: Origin cert
     description: Specifies the Tunnel certificate for one of your zones, authorizing the client to serve as an origin for that zone. A certificate is required to use Cloudflare Tunnel.
@@ -22,7 +22,7 @@ configuration:
     description: Specifies the verbosity of logging.
   transport-loglevel:
     name: Transport log level
-    description: Specifies the verbosity of logs for the transport between cloudflared and the Cloudflare edge.
+    description: Specifies the verbosity of logs for the transport between cloudflared and the Cloudflare global network.
   url:
     name: Url
     description: Quick tunnels, when run, will generate a URL that consists of a random subdomain of the website trycloudflare.com
@@ -61,3 +61,6 @@ configuration:
   region:
     name: Region
     description: Allows you to choose the regions to which connections are established. Omit or leave empty to connect to the global region.
+  edge-ip-version:
+    name: Edge IP version
+    description: Specifies the IP address version (IPv4 or IPv6) used to establish a connection between cloudflared and the Cloudflare global network.
